--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <!-- Vue DevTools Connection Script -->
+    <script>
+      // This helps Vue DevTools detect the Vue instance
+      window.__VUE_DEVTOOLS_HOST__ = 'localhost'
+      window.__VUE_DEVTOOLS_PORT__ = '8098'
+    </script>
+    <script src="http://localhost:8098"></script>
   </head>
   <body>
     <noscript>
